--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -2,11 +2,11 @@
   padding: 50px 20px 44px;
 
   @media (min-width: $tablet) {
-    padding: 80px 0 90px;
+    padding: 80px 20px 90px;
   }
 
   @media (min-width: $desktop) {
-    padding: 100px 0 120px;
+    padding: 100px 40px 120px;
     display: grid;
     grid-template-columns: 318px auto;
     column-gap: 30px;
@@ -24,7 +24,6 @@
   @media (min-width: $tablet) {
     font-size: 42px;
     line-height: 64px;
-    padding: 0 20px;
   }
 
   @media (min-width: $desktop) {
@@ -35,22 +34,20 @@
 
 .catalog__filter {
   @media (min-width: $tablet) {
+    margin-bottom: 44px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 22px;
     row-gap: 40px;
-    margin-bottom: 44px;
-    padding: 0 20px;
   }
 
   @media (min-width: $desktop) {
+    margin-bottom: 0;
+    padding: 0;
     grid-column: 1/2;
     display: flex;
     flex-direction: column;
     row-gap: 0;
-    margin-bottom: 0;
-    padding: 0;
-    padding-left: 40px;
   }
 }
 
@@ -75,7 +72,6 @@
   @media (min-width: $tablet) {
     margin: 0;
     grid-column: 1/-1;
-    display: flex;
     flex-direction: row;
     justify-content: center;
   }
@@ -91,7 +87,12 @@
   border-radius: 4px;
 
   @media (min-width: $tablet) {
+    font-size: 14px;
     padding: 8px 5px;
+  }
+
+  @media (min-width: $tablet) {
+    min-width: 120px;
   }
 }
 
