--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -1,7 +1,8 @@
 .price {
+  padding: 0;
   margin: 0;
   margin-bottom: 23.7px;
-  padding: 0;
+
   border: none;
 
   @media (min-width: $tablet) {
@@ -16,6 +17,7 @@
 .price__title {
   padding: 0;
   margin-bottom: 21.46px;
+
   font-size: 16px;
   line-height: 24px;
   font-weight: 600;
@@ -26,30 +28,34 @@
   margin-bottom: 36.53px;
   width: 100%;
   height: 2px;
-  background-color: $light-grey;
+
   position: relative;
+
+  background-color: $light-grey;
 
   &::before {
     position: absolute;
     content: "";
+    width: 80%;
     height: 4.18px;
-    background-color: $primary-lighter;
-    width: 70vw;
     top: -50%;
     left: 0;
+    background-color: $primary-lighter;
   }
 }
 
 .price__slider-thumb {
-  display: block;
   width: 24px;
   height: 24px;
+
+  display: block;
+  position: absolute;
+  top: -10.5px;
+
   border-radius: 50%;
   background-color: $base-white;
   box-shadow: inset 0 0 0 2px $primary-lighter;
   cursor: pointer;
-  position: absolute;
-  top: -10.5px;
 
   &:hover,
   &:focus {
@@ -60,27 +66,28 @@
   }
 
   &:active {
-    border: 2px solid $base-primary;
     background-color: $base-primary;
     box-shadow: inset 0 0 0 2px $base-white;
     outline: none;
+    border: 2px solid $base-primary;
   }
 
   &:disabled {
+    background-color: $lightest-grey;
     box-shadow: inset 0 0 0 2px $base-grey;
     outline: none;
-    background-color: $lightest-grey;
     border: none;
   }
 }
 
 .price__slider-thumb--to {
-  left: 70vw;
+  left: 80%;
 }
 
 .price__input-wrapper {
   display: flex;
   justify-content: space-between;
+
   background-image: url("data:image/svg+xml,%3Csvg width='10' height='3' viewBox='0 0 10 3' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.40269 2.17684H0.597656V0.0853271H9.40269V2.17684Z' fill='%23BDBDBD'/%3E%3C/svg%3E%0A");
   background-repeat: no-repeat;
   background-position: center;
@@ -88,14 +95,16 @@
 
 .price__input {
   padding: 7px 10px;
+  max-width: 118px;
+
   font-size: 16px;
   line-height: 24px;
   font-weight: 500;
-  max-width: 118px;
   text-align: center;
+
+  border: none;
   border-radius: 4px;
   box-shadow: inset 0 0 0 2px $primary-lighter;
-  border: none;
   box-sizing: border-box;
 
   &::placeholder {
@@ -108,8 +117,8 @@
   }
 
   &:disabled {
+    color: $base-grey;
     box-shadow: inset 0 0 0 2px $light-grey;
     background-color: transparent;
-    color: $base-grey;
   }
 }
