--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -47,7 +47,7 @@ button {
 
 // //*tablet-width
 
-// @media (min-width: $tablet-width) {
+// @media (min-width: $tablet-width-width) {
 //   .body {
 //     min-width: 768px;
 //   }
@@ -55,7 +55,7 @@ button {
 
 // //*desktop-width
 
-// @media (min-width: $desktop-width) {
+// @media (min-width: $desktop-width-width) {
 //   .body {
 //     min-width: 1440px;
 //   }
