--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -17,9 +17,9 @@ $lavender-latte: #EAE6FC;
 $espresso: #E5E6E8;
 
 // *media-width
-$mobile: 320px;
-$tablet: 768px;
-$desktop: 1440px;
+$mobile-width-only: 767px;
+$tablet-width: 768px;
+$desktop-width: 1440px;
 
 // *indents
 $base-indent: 20px;
