--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -1,6 +1,6 @@
 .body__wrapper {
   margin: 0 auto;
-  max-width: $desktop;
+  max-width: $desktop-width;
 
   position: relative;
   display: flex;
