--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,13 +5,14 @@
   display: flex;
   align-items: center;
   box-sizing: border-box;
+  background-color: $base-white;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     padding: 0 20px;
     min-height: 80px;
   }
 
-  @media (min-width: $desktop) {
+  @media (min-width: $desktop-width) {
     padding: 0 40px;
   }
 }
@@ -20,11 +21,11 @@
   margin-left: 20px;
   margin-right: auto;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     margin-left: 0;
   }
 
-  @media (min-width: $desktop) {
+  @media (min-width: $desktop-width) {
     max-width: 320px;
     display: flex;
     align-items: center;
@@ -39,7 +40,7 @@
 .header__logo-text {
   display: none;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     display: block;
   }
 }
@@ -52,7 +53,7 @@
 
   text-align: left;
 
-  @media (min-width: $desktop) {
+  @media (min-width: $desktop-width) {
     display: block;
   }
 }
@@ -60,7 +61,7 @@
 .header__menu {
   display: none;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -70,7 +71,7 @@
 .header__user-menu {
   display: flex;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     margin-left: auto;
     justify-content: end;
   }
@@ -79,7 +80,7 @@
 .header__navigation {
   order: 10;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     order: 0;
   }
 }
@@ -97,7 +98,7 @@
   border: none;
   cursor: pointer;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     display: none;
   }
 }
@@ -133,5 +134,139 @@
 
   &::after {
     transform: rotate(-45deg);
+  }
+}
+
+// *mobile-width-only
+
+@media (max-width: $mobile-width-only) {
+
+  // Открытое мобильное меню
+  .header {
+    position: relative;
+  }
+
+  .header__navigation--opened .header__menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    position: absolute;
+    width: 100%;
+    min-height: 57px;
+    top: 60px;
+    left: 0;
+
+    z-index: 3;
+    background-color: $base-white;
+  }
+
+  .header__navigation--opened .menu__item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      left: 0;
+      bottom: 0;
+      background-color: $base-secondary;
+    }
+
+    &:first-child::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      left: 0;
+      top: 0;
+      background-color: $base-secondary;
+    }
+  }
+
+  .header__navigation--opened .menu__link--active {
+    &::after {
+      width: 0;
+      height: 0;
+    }
+  }
+
+  // Закрытое мобильное меню
+  .header__navigation--closed .header__menu {
+    display: none;
+  }
+
+  // !No JS
+  .body--nojs {
+
+    .header {
+      display: grid;
+      grid-template-columns: repeat(2, auto);
+    }
+
+    .header__navigation-button {
+      display: none;
+    }
+
+    .header__user-menu {
+      margin-left: auto;
+    }
+
+    .header__navigation {
+      grid-column: 1/-1;
+
+      width: 100%;
+
+      display: block;
+      position: static;
+
+      text-align: center;
+    }
+
+    .header__menu {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .menu__item {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        left: 0;
+        bottom: 0;
+        background-color: $base-secondary;
+      }
+
+      &:first-child::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        left: 0;
+        top: 0;
+        background-color: $base-secondary;
+      }
+    }
+
+    .menu__link--active {
+      &::after {
+        width: 0;
+        height: 0;
+      }
+    }
   }
 }
