--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -15,11 +15,11 @@
   justify-content: space-between;
   align-items: center;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     justify-content: end;
   }
 
-  @media (min-width: $desktop) {
+  @media (min-width: $desktop-width) {
     margin-bottom: 30px;
   }
 }
@@ -56,7 +56,7 @@
   padding: 0;
   list-style: none;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     margin-bottom: 70px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -64,7 +64,7 @@
     grid-auto-flow: dense;
   }
 
-  @media (min-width: $desktop) {
+  @media (min-width: $desktop-width) {
     margin-bottom: 60px;
     grid-template-columns: repeat(3, 1fr);
   }
@@ -80,7 +80,7 @@
     margin-bottom: 20px;
   }
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     padding: 50px 30px 30px;
 
     &:not(:last-child) {
@@ -96,7 +96,7 @@
   align-items: center;
   justify-content: center;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     margin-bottom: 30px;
   }
 }
@@ -109,7 +109,7 @@
   line-height: 32px;
   font-weight: 700;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     margin-bottom: 10px;
 
     font-size: 24px;
@@ -124,7 +124,7 @@
   font-size: 14px;
   line-height: 20px;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-width) {
     margin-bottom: 20px;
   }
 }
@@ -162,7 +162,7 @@
 }
 
 .products__pagination {
-  @media (min-width: $desktop) {
+  @media (min-width: $desktop-width) {
     grid-column: 1/-1;
   }
 }
