--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import "vars.scss";
 @import './blocks/advantages.scss';
 @import './blocks/badge.scss';
+@import './blocks/button.scss';
 @import './blocks/body.scss';
 @import './blocks/catalog.scss';
 @import './blocks/contacts.scss';
