--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -78,32 +78,18 @@
 }
 
 .catalog__button {
-  padding: 10px 15px;
   min-width: 160px;
 
   font-size: 13px;
   line-height: 24px;
 
-  border-radius: 4px;
-
   @media (min-width: $tablet-width) {
     font-size: 14px;
-    padding: 8px 5px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     min-width: 120px;
   }
-}
-
-.catalog__button--submit {
-  color: $base-white;
-  background-color: $base-primary;
-}
-
-.catalog__button--reset {
-  color: $base-primary;
-  background-color: $base-white;
 }
 
 .catalog__badge {
