--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -119,14 +119,10 @@
 }
 
 .special__button {
-  padding: 8px 20px;
+  min-width: 113px;
 
   font-size: 16px;
   line-height: 24px;
-  color: $base-white;
-
-  border-radius: 4px;
-  background-color: $base-primary;
 }
 
 .special__badge {
