add fonts, leaflet & so on

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -58,6 +58,10 @@
   }
 }
 
+.advantages__item svg {
+  fill: $base-primary;
+}
+
 .advantages__item {
   &:not(:last-child) {
     margin-bottom: 32px;
