--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,24 +1,25 @@
 @import "vars.scss";
-@import './global/fonts.scss';
-@import './global/global.scss';
-@import './blocks/advantages.scss';
-@import './blocks/badge.scss';
-@import './blocks/button.scss';
-@import './blocks/body.scss';
-@import './blocks/catalog.scss';
-@import './blocks/contacts.scss';
-@import './blocks/country.scss';
-@import './blocks/developer.scss';
-@import './blocks/footer.scss';
-@import './blocks/header.scss';
-@import './blocks/logo.scss';
-@import './blocks/main.scss';
-@import './blocks/map.scss';
-@import './blocks/menu.scss';
-@import './blocks/milk-type.scss';
-@import './blocks/pagination.scss';
-@import './blocks/price.scss';
-@import './blocks/products.scss';
-@import './blocks/socials.scss';
-@import './blocks/special.scss';
-@import './blocks/user-nav.scss';
+@import "./global/fonts.scss";
+@import "./global/global.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/badge.scss";
+@import "./blocks/button.scss";
+@import "./blocks/button-element.scss";
+@import "./blocks/body.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/country.scss";
+@import "./blocks/developer.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/main.scss";
+@import "./blocks/map.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/milk-type.scss";
+@import "./blocks/pagination.scss";
+@import "./blocks/price.scss";
+@import "./blocks/products.scss";
+@import "./blocks/socials.scss";
+@import "./blocks/special.scss";
+@import "./blocks/user-nav.scss";
