--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -1,20 +1,20 @@
 // *colors
 //base-colors
-$base-white: #FFFFFF;
-$base-grey: #BDBDBD;
+$base-white: #ffffff;
+$base-grey: #bdbdbd;
 $base-black: #333333;
-$base-primary: #7859CF;
-$base-secondary: #F0EBFF;
+$base-primary: #7859cf;
+$base-secondary: #f0ebff;
 //alt-colors
 $primary-opacity: rgba(120, 89, 207, 0.25);
-$primary-lighter: #9070EC;
-$primary-darker: #593CAC;
-$light-grey: #E2E2E2;
+$primary-lighter: #9070ec;
+$primary-darker: #593cac;
+$light-grey: #e2e2e2;
 //bg-colors
-$lightest-grey: #F8F8F8;
-$flat-white: #F3EBE1;
-$lavender-latte: #EAE6FC;
-$espresso: #E5E6E8;
+$lightest-grey: #f8f8f8;
+$flat-white: #f3ebe1;
+$lavender-latte: #eae6fc;
+$espresso: #e5e6e8;
 
 // *media-width
 $mobile-width-only: 767px;
