--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -84,7 +84,7 @@
   &:hover,
   &:focus {
     outline: none;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
   }
 
   @media (min-width: $tablet-width) {
