--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -6,7 +6,7 @@ body {
   margin: 0;
   min-height: 100%;
 
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", "Arial", sans-serif;
   font-weight: 400;
   color: $base-black;
   font-size: 12px;
@@ -23,13 +23,6 @@ img {
   object-fit: contain;
 }
 
-button {
-  border: none;
-  font-weight: 400;
-  font-family: 'Montserrat', sans-serif;
-  cursor: pointer;
-}
-
 .visually-hidden {
   margin: -1px;
   padding: 0;
@@ -43,19 +36,3 @@ button {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
-// //*tablet-width
-
-// @media (min-width: $tablet-width-width) {
-//   .body {
-//     min-width: 768px;
-//   }
-// }
-
-// //*desktop-width
-
-// @media (min-width: $desktop-width-width) {
-//   .body {
-//     min-width: 1440px;
-//   }
-// }
