--- a/source/sass/blocks/pagination.scss
+++ b/source/sass/blocks/pagination.scss
@@ -33,6 +33,7 @@
   font-size: 16px;
   line-height: 24px;
   color: $base-primary;
+  text-decoration: none;
 
   cursor: pointer;
   background-color: $base-white;
