--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,4 +22,5 @@
 @import "./blocks/products.scss";
 @import "./blocks/socials.scss";
 @import "./blocks/special.scss";
+@import "./blocks/swiper.scss";
 @import "./blocks/user-nav.scss";
