--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -1,33 +1,250 @@
 .swiper {
-  margin-bottom: 10px;
   width: 100%;
-
-  @media (min-width: $tablet-width) {
-    margin-bottom: 0;
-    min-height: 476px;
-    order: 2;
-  }
-
-  @media (min-width: $desktop-width) {
-    min-height: 600px;
-    order: 0;
-  }
+  min-height: 656px;
 }
 
 .swiper-wrapper {
+  width: 100%;
   height: 100%;
 }
 
 .swiper-slide {
+  padding: 20px;
+  padding-bottom: 60px;
+  height: 100%;
+
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  box-sizing: border-box;
+
+
+  @media (min-width: $tablet-width) {
+    padding: 60px 80px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 30px 80px 60px;
+
+    display: grid;
+    grid-template-columns: 600px auto;
+    gap: 30px;
+  }
+
+  &--flat-white {
+    background-color: $flat-white;
+
+    @media (min-width: $tablet-width) {
+      background-image: linear-gradient(to bottom, $flat-white 77%, $base-white 77%);
+    }
+
+    @media (min-width: $desktop-width) {
+      background-image: none;
+    }
+  }
+
+  &--lavender {
+    background-color: $lavender-latte;
+
+    @media (min-width: $tablet-width) {
+      background-image: linear-gradient(to bottom, $lavender-latte 77%, $base-white 77%);
+    }
+
+    @media (min-width: $desktop-width) {
+      background-image: none;
+    }
+  }
+
+  &--espresso {
+    background-color: $espresso;
+
+    @media (min-width: $tablet-width) {
+      background-image: linear-gradient(to bottom, $espresso 77%, $base-white 77%);
+    }
+
+    @media (min-width: $desktop-width) {
+      background-image: none;
+    }
+  }
 }
+
+.swiper-slide__image-wrapper {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.swiper-slide__image {
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    min-height: 476px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 600px;
+  }
+}
+
+.swiper__info {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+}
+
+.swiper-slide__title {
+  margin: 0;
+  margin-bottom: 10px;
+
+  font-size: 36px;
+  line-height: 48px;
+  font-weight: 700;
+  letter-spacing: 2%;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 16px;
+    font-size: 56px;
+    line-height: 80px;
+  }
+}
+
+.swiper-slide__text {
+  margin: 0;
+  margin-bottom: 20px;
+
+  font-size: 14px;
+  line-height: 20px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 40px;
+    text-align: left;
+  }
+}
+
+.swiper-slide__old-price {
+  margin-right: 6px;
+
+  font-size: 16px;
+  line-height: 32px;
+  color: $base-primary;
+}
+
+.swiper-slide__new-price {
+  margin-right: 20px;
+
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 600;
+}
+
+.swiper-slide__button {
+  min-width: 113px;
+
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.swiper-slide__badge {
+  margin: 0;
+  margin-bottom: 4px;
+}
+
+
+
+
+// Пагинация
 
 .swiper-pagination {
   display: none;
 
   @media (min-width: $desktop-width) {
     display: block;
+  }
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+  width: 62px;
+  height: 4px;
+
+  background-color: $base-white;
+  opacity: 1;
+  border-radius: 0;
+
+  &:hover:not(.swiper-pagination-bullet-active),
+  &:focus:not(.swiper-pagination-bullet-active) {
+    background-color: $primary-opacity;
+  }
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
+  background-color: $base-primary;
+}
+
+// Кнопки
+
+.swiper .swiper-button {
+  width: 20px;
+  cursor: pointer;
+
+  &:hover {
+    background: linear-gradient(to right, $base-white 0%, transparent 70%);
+  }
+
+  &:active {
+    background: linear-gradient(to right, $base-primary -200%, transparent 70%);
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 80px;
+    height: 642px;
+    top: 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 100%;
+    top: 21px;
+  }
+}
+
+.swiper .swiper-button-prev {
+  left: 0;
+
+  &::after {
+    content: "";
+    top: calc(50% - 10px);
+    left: calc(50% - 10px);
+    width: 20px;
+    height: 20px;
+    background: center center no-repeat url("data:image/svg+xml,%3Csvg width='11' height='20' viewBox='0 0 11 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.71661 0L11 1.32082L2.56677 10L11 18.6792L9.71661 20L0 10L9.71661 0Z' fill='%237859CF'/%3E%3C/svg%3E%0A") transparent;
+  }
+}
+
+.swiper .swiper-button-next {
+  right: 0;
+  transform: scale(-1, 1);
+
+  &::after {
+    content: "";
+    top: calc(50% - 10px);
+    left: calc(50% - 10px);
+    width: 20px;
+    height: 20px;
+    background: center center no-repeat url("data:image/svg+xml,%3Csvg width='11' height='20' viewBox='0 0 11 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.71661 0L11 1.32082L2.56677 10L11 18.6792L9.71661 20L0 10L9.71661 0Z' fill='%237859CF'/%3E%3C/svg%3E%0A") transparent;
   }
 }
