--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -1,21 +1,19 @@
 .swiper {
-  width: 100%;
-  min-height: 656px;
+  position: relative;
 }
 
 .swiper-wrapper {
-  width: 100%;
-  height: 100%;
+  position: relative;
 }
 
 .swiper-slide {
   padding: 20px;
   padding-bottom: 60px;
-  height: 100%;
 
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   box-sizing: border-box;
 
 
@@ -68,7 +66,7 @@
   }
 }
 
-.swiper-slide__image-wrapper {
+.swiper__image-wrapper {
   height: 100%;
   display: flex;
   justify-content: center;
@@ -76,7 +74,7 @@
   box-sizing: border-box;
 }
 
-.swiper-slide__image {
+.swiper__image {
   width: 100%;
 
   @media (min-width: $tablet-width) {
@@ -103,7 +101,7 @@
   }
 }
 
-.swiper-slide__title {
+.swiper__title {
   margin: 0;
   margin-bottom: 10px;
 
@@ -119,7 +117,7 @@
   }
 }
 
-.swiper-slide__text {
+.swiper__text {
   margin: 0;
   margin-bottom: 20px;
 
@@ -137,7 +135,7 @@
   }
 }
 
-.swiper-slide__old-price {
+.swiper__old-price {
   margin-right: 6px;
 
   font-size: 16px;
@@ -145,7 +143,7 @@
   color: $base-primary;
 }
 
-.swiper-slide__new-price {
+.swiper__new-price {
   margin-right: 20px;
 
   font-size: 20px;
@@ -153,20 +151,17 @@
   font-weight: 600;
 }
 
-.swiper-slide__button {
+.swiper__button {
   min-width: 113px;
 
   font-size: 16px;
   line-height: 24px;
 }
 
-.swiper-slide__badge {
+.swiper__badge {
   margin: 0;
   margin-bottom: 4px;
 }
-
-
-
 
 // Пагинация
 
@@ -217,7 +212,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    height: 100%;
     top: 21px;
   }
 }
