--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  background-color: $base-white;
 
   @media (min-width: $desktop-width) {
     padding: 40px;
