--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -1,14 +1,12 @@
 .swiper {
-  position: relative;
-}
-
-.swiper-wrapper {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .swiper-slide {
-  padding: 20px;
-  padding-bottom: 60px;
+  padding: 20px 20px 60px;
 
   display: flex;
   flex-direction: column;
@@ -16,17 +14,12 @@
   justify-content: center;
   box-sizing: border-box;
 
-
   @media (min-width: $tablet-width) {
     padding: 60px 80px 0;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 30px 80px 60px;
-
-    display: grid;
-    grid-template-columns: 600px auto;
-    gap: 30px;
+    padding: 30px 80px 84px;
   }
 
   &--flat-white {
@@ -66,38 +59,49 @@
   }
 }
 
-.swiper__image-wrapper {
-  height: 100%;
+.swiper-slide__wrapper {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   box-sizing: border-box;
+  gap: 10px;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: column-reverse;
+    gap: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 600px auto;
+    gap: 30px;
+  }
 }
 
 .swiper__image {
   width: 100%;
-
-  @media (min-width: $tablet-width) {
-    min-height: 476px;
-  }
-
-  @media (min-width: $desktop-width) {
-    min-height: 600px;
-  }
+  height: 100%;
 }
 
 .swiper__info {
+  max-width: 600px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  flex-grow: 1;
+
   @media (min-width: $tablet-width) {
-    margin-bottom: 20px;
+    max-width: 900px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 0;
+    max-width: 100%;
 
-    display: flex;
-    flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
   }
 }
 
@@ -131,6 +135,7 @@
 
   @media (min-width: $desktop-width) {
     margin-bottom: 40px;
+
     text-align: left;
   }
 }
@@ -151,7 +156,7 @@
   font-weight: 600;
 }
 
-.swiper__button {
+.swiper__price-button {
   min-width: 113px;
 
   font-size: 16px;
@@ -164,8 +169,8 @@
 }
 
 // Пагинация
-
 .swiper-pagination {
+  margin-bottom: 50px;
   display: none;
 
   @media (min-width: $desktop-width) {
@@ -177,9 +182,9 @@
   width: 62px;
   height: 4px;
 
-  background-color: $base-white;
   opacity: 1;
   border-radius: 0;
+  background-color: $base-white;
 
   &:hover:not(.swiper-pagination-bullet-active),
   &:focus:not(.swiper-pagination-bullet-active) {
@@ -192,9 +197,11 @@
 }
 
 // Кнопки
-
 .swiper .swiper-button {
   width: 20px;
+
+  top: 22px;
+  height: 100%;
   cursor: pointer;
 
   &:hover {
@@ -207,12 +214,6 @@
 
   @media (min-width: $tablet-width) {
     width: 80px;
-    height: 642px;
-    top: 22px;
-  }
-
-  @media (min-width: $desktop-width) {
-    top: 21px;
   }
 }
 
@@ -221,10 +222,10 @@
 
   &::after {
     content: "";
-    top: calc(50% - 10px);
-    left: calc(50% - 10px);
     width: 20px;
     height: 20px;
+    top: calc(50% - 10px);
+    left: calc(50% - 10px);
     background: center center no-repeat url("data:image/svg+xml,%3Csvg width='11' height='20' viewBox='0 0 11 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.71661 0L11 1.32082L2.56677 10L11 18.6792L9.71661 20L0 10L9.71661 0Z' fill='%237859CF'/%3E%3C/svg%3E%0A") transparent;
   }
 }
@@ -234,11 +235,11 @@
   transform: scale(-1, 1);
 
   &::after {
+    width: 20px;
+    height: 20px;
     content: "";
     top: calc(50% - 10px);
     left: calc(50% - 10px);
-    width: 20px;
-    height: 20px;
     background: center center no-repeat url("data:image/svg+xml,%3Csvg width='11' height='20' viewBox='0 0 11 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.71661 0L11 1.32082L2.56677 10L11 18.6792L9.71661 20L0 10L9.71661 0Z' fill='%237859CF'/%3E%3C/svg%3E%0A") transparent;
   }
 }
