--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -19,7 +19,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 30px 80px 84px;
+    padding: 25px 80px 84px;
+    padding-right: 110px;
   }
 
   &--flat-white {
@@ -112,7 +113,7 @@
   font-size: 36px;
   line-height: 48px;
   font-weight: 700;
-  letter-spacing: 2%;
+  letter-spacing: 1px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 16px;
@@ -140,6 +141,14 @@
   }
 }
 
+.swiper__text br {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: inline;
+  }
+}
+
 .swiper__old-price {
   margin-right: 6px;
 
@@ -157,6 +166,7 @@
 }
 
 .swiper__price-button {
+  padding: 8px;
   min-width: 113px;
 
   font-size: 16px;
@@ -170,7 +180,7 @@
 
 // Пагинация
 .swiper-pagination {
-  margin-bottom: 50px;
+  margin-bottom: 52px;
   display: none;
 
   @media (min-width: $desktop-width) {
@@ -214,6 +224,12 @@
 
   @media (min-width: $tablet-width) {
     width: 80px;
+    height: 77%;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 80px;
+    height: 100%;
   }
 }
 
