--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -42,7 +42,7 @@
 }
 
 .footer__navigation-wrapper {
-  padding: 22px 20px;
+  padding: 20px;
   display: flex;
   align-items: center;
 
@@ -87,12 +87,14 @@
 
   @media (min-width: $desktop-width) {
     padding: 0;
+    margin-top: 10px;
+    margin-bottom: 8px;
   }
 }
 
 .footer__list {
   margin: 0;
-  padding: 20px;
+  padding: 22px 20px 24px;
 
   list-style: none;
 
@@ -156,6 +158,7 @@
 
 .footer__logo-text--full {
   display: none;
+  letter-spacing: 1px;
 
   @media (min-width: $tablet-width) {
     display: block;
