--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -3,14 +3,13 @@
 
   display: flex;
   align-items: center;
+  gap: 6px;
 
   text-decoration: none;
   cursor: pointer;
 }
 
 .logo svg {
-  padding: 0 6px;
-
   fill: $base-primary;
 }
 
