--- a/source/sass/blocks/pagination.scss
+++ b/source/sass/blocks/pagination.scss
@@ -14,7 +14,6 @@
 
   @media (min-width: $desktop-width) {
     justify-content: end;
-    transform: translateX(40px);
   }
 }
 
@@ -84,5 +83,9 @@
 
   @media (min-width: $tablet-width) {
     display: block;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 14px;
   }
 }
