--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -16,12 +16,16 @@
 
 .price__title {
   padding: 0;
-  margin-bottom: 21.46px;
+  margin-bottom: 32px;
 
   font-size: 16px;
   line-height: 24px;
   font-weight: 600;
   text-align: left;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 30px;
+  }
 }
 
 .price__slider {
@@ -36,11 +40,19 @@
   &::before {
     position: absolute;
     content: "";
-    width: 80%;
+    width: 84%;
     height: 4.18px;
     top: -50%;
     left: 0;
     background-color: $primary-lighter;
+
+    @media (min-width: $tablet-width) {
+      width: 78%;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 86%;
+    }
   }
 }
 
@@ -81,7 +93,15 @@
 }
 
 .price__slider-thumb--to {
-  left: 80%;
+  left: 84%;
+
+  @media (min-width: $tablet-width) {
+    left: 78%;
+  }
+
+  @media (min-width: $desktop-width) {
+    left: 86%;
+  }
 }
 
 .price__input-wrapper {
@@ -91,6 +111,10 @@
   background-image: url("data:image/svg+xml,%3Csvg width='10' height='3' viewBox='0 0 10 3' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.40269 2.17684H0.597656V0.0853271H9.40269V2.17684Z' fill='%23BDBDBD'/%3E%3C/svg%3E%0A");
   background-repeat: no-repeat;
   background-position: center;
+
+  @media (min-width: $tablet-width) {
+    gap: 30px;
+  }
 }
 
 .price__input {
@@ -106,6 +130,14 @@
   border-radius: 4px;
   box-shadow: inset 0 0 0 2px $primary-lighter;
   box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    max-width: 93px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 132px;
+  }
 
   &::placeholder {
     color: $base-grey;
