--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,5 +1,7 @@
 .map {
   height: 420px;
+  background-image: url('../../img/map.jpg');
+  background-position: center;
 
   @media (min-width: $tablet-width) {
     height: 480px;
