--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -61,6 +61,7 @@
 }
 
 .swiper-slide__wrapper {
+  max-width: $desktop-width;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -100,7 +101,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    max-width: 100%;
+    max-width: 625px;
 
     align-items: flex-start;
   }
