--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,7 +1,11 @@
 .advantages {
-  padding: 50px 20px 60px;
-
   background-color: $base-white;
+}
+
+.advantages__wrapper {
+  max-width: $desktop-width;
+  padding: 50px 20px 60px;
+  margin: 0 auto;
 
   @media (min-width: $tablet-width) {
     padding: 60px 30px 100px;
@@ -119,6 +123,12 @@
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 24px;
+  }
+}
+
+.advantages__text br {
+  @media (min-width: $tablet-width) {
+    display: none;
   }
 }
 
