--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -1,6 +1,6 @@
 .body__wrapper {
   margin: 0 auto;
-  max-width: $desktop-width;
+  // max-width: $desktop-width;
 
   position: relative;
   display: flex;
@@ -9,4 +9,72 @@
 
   box-sizing: border-box;
   overflow: hidden;
+}
+
+// No JS
+.body--nojs {
+  .header {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+  }
+
+  .header__navigation-button {
+    display: none;
+  }
+
+  .header__user-menu {
+    margin-left: auto;
+  }
+
+  .header__navigation {
+    grid-column: 1/-1;
+
+    width: 100%;
+
+    display: block;
+    position: static;
+
+    text-align: center;
+  }
+
+  .header__menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .menu__item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      left: 0;
+      bottom: 0;
+      background-color: $base-secondary;
+    }
+
+    &:first-child::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      left: 0;
+      top: 0;
+      background-color: $base-secondary;
+    }
+  }
+
+  .menu__link--active {
+    &::after {
+      width: 0;
+      height: 0;
+    }
+  }
 }
