--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,11 +1,16 @@
 .header {
   width: 100%;
+  background-color: $base-white;
+}
+
+.header__wrapper {
+  max-width: $desktop-width;
+  margin: 0 auto;
   min-height: 60px;
 
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  background-color: $base-white;
 
   @media (min-width: $tablet-width) {
     padding: 0 20px;
@@ -219,73 +224,5 @@
   // Закрытое мобильное меню
   .header__navigation--closed .header__menu {
     display: none;
-  }
-
-  // No JS
-  .body--nojs {
-    .header {
-      display: grid;
-      grid-template-columns: repeat(2, auto);
-    }
-
-    .header__navigation-button {
-      display: none;
-    }
-
-    .header__user-menu {
-      margin-left: auto;
-    }
-
-    .header__navigation {
-      grid-column: 1/-1;
-
-      width: 100%;
-
-      display: block;
-      position: static;
-
-      text-align: center;
-    }
-
-    .header__menu {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .menu__item {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      position: relative;
-
-      &::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 1px;
-        left: 0;
-        bottom: 0;
-        background-color: $base-secondary;
-      }
-
-      &:first-child::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 1px;
-        left: 0;
-        top: 0;
-        background-color: $base-secondary;
-      }
-    }
-
-    .menu__link--active {
-      &::after {
-        width: 0;
-        height: 0;
-      }
-    }
   }
 }
