--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,6 +1,6 @@
 .map {
   height: 420px;
-  background-image: url('../../img/map.jpg');
+  background-image: url("../../img/map.jpg");
   background-position: center;
 
   @media (min-width: $tablet-width) {
