--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -34,6 +34,7 @@
   line-height: 24px;
   font-weight: 600;
   color: $base-primary;
+  letter-spacing: 1px;
 
   border: none;
   background-color: transparent;
